crates/math-core/tests/snapshots/conversion_test__integral_with_limits_in_weird_spot.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int_0^1\\limits dx"
---
<math>
    <munderover>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
    <mi>d</mi>
    <mi>x</mi>
</math>
