crates/math-core/tests/snapshots/conversion_test__integral_with_limits_in_weird_spot_4.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int_3\\limits''' dx"
---
<math>
    <munderover>
        <mo lspace="0">∫</mo>
        <mn>3</mn>
        <mo>‴</mo>
    </munderover>
    <mi>d</mi>
    <mi>x</mi>
</math>
