crates/math-core/tests/snapshots/conversion_test__integral_with_lower_bound.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int_0 dx"
---
<math>
    <msub>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
    </msub>
    <mi>d</mi>
    <mi>x</mi>
</math>
