crates/math-core/tests/snapshots/conversion_test__integral_with_reversed_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\int\\limits^1_0 dx"
---
<math>
    <munderover>
        <mo lspace="0">∫</mo>
        <mn>0</mn>
        <mn>1</mn>
    </munderover>
    <mi>d</mi>
    <mi>x</mi>
</math>
